@@ -41,7 +41,6 @@
 #define INI_KRB5_CONF   "krb5.ini"		/* Location of krb5.conf file */
 
 #define KRB5_DBM_COMPAT__                       /* Don't load dbm.h */
-#define KRB5_KDB5__                             /* Don't load kdb.h */
 #define KRB5_KDB5_DBM__                         /* Don't load kdb_dbm.h */
 
 #define BITS16
