@@ -1,3 +1,8 @@
+Thu May 25 19:27:45 1995 Keith Vetter (keithv@fusion.com)
+
+	* adm_proto.h: two function's prototype were missing INTERFACE.
+	* k5-config.h: kadm needs the kdb.h file.
+
 Thu May 25 15:39:31 1995 Keith Vetter (keithv@fusion.com)
 
 	* los-proto.h: moved in the prototype for krb5_make_fulladdr.
